# computational-algebra

./: .gitignore  computational-algebra.cabal
algebraic-prelude/: algebraic-prelude.cabal
factor-hensel/: factor-hensel.cabal
halg-algorithms/: halg-algorithms.cabal
halg-galois-fields/: halg-galois-fields.cabal
halg-polynomials/: halg-polynomials.cabal
src/Algebra/: Internal.hs  Matrix.hs
src/Algebra/Matrix/: RepaIntMap.hs
src/Data/: Entry.hs
src/Data/Heap/: Class.hs  Ekmett.hs  Pairing.hs  Spray.hs
