cabal-version: 1.12
name:           computational-algebra
version:        0.6.0.0
description:    Please see the project Web Site at <https://konn.github.io/computational-algebra>
category:       Math
homepage:       https://github.com/konn/computational-algebra#readme
bug-reports:    https://github.com/konn/computational-algebra/issues
author:         Hiromi ISHII
maintainer:     konn.jinro _at_ gmail.com
copyright:      2018 (c) Hiromi ISHII
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3

build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/konn/computational-algebra

flag examples
  description: Whether to build example binaries (default: False)

  manual: True
  default: False

flag profile
  description: Whether to build profiling binaries (default: False)

  manual: True
  default: False

library
  exposed-modules:
      Algebra.Prelude
      AlgebraicPrelude
  other-modules:
      Paths_computational_algebra
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , algebra
    , base >=4.7 && <5
    , containers
    , singletons
    , sized
    , basic-prelude
  if flag(profile)
    ghc-options: -prof -fprof-auto-exported
  default-language: Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Algebra.Ring.Polynomial.Factorise.Hensel
  build-depends:       base >= 4.7 && < 5
                     , algebraic-prelude
                     , algebra
  ghc-options:         -Wall
  default-extensions: TypeInType , DataKinds , PolyKinds
                    , GADTs , MultiParamTypeClasses , TypeFamilies
                    , FlexibleContexts , FlexibleInstances
                    , UndecidableInstances
                    , OverloadedLabels , NoImplicitPrelude
                    , QuasiQuotes , ScopedTypeVariables
  exposed-modules:
      Algebra.Field.AlgebraicReal
  hs-source-dirs:
      src
  default-extensions: CPP DataKinds FlexibleContexts FlexibleInstances GADTs MultiParamTypeClasses NoImplicitPrelude OverloadedLabels PolyKinds TypeFamilies TypeInType UndecidableInstances
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , algebra
    , algebraic-prelude
    , arithmoi
    , base >=4.7 && <5
    , containers
    , entropy
    , lens
    , mono-traversable
    , sized
  exposed-modules:
      Algebra.Algorithms.Groebner.F4
      Algebra.Algorithms.Groebner.Homogeneous
      Algebra.Algorithms.Groebner.Signature
      Algebra.Algorithms.Groebner.Signature.Rules
      Algebra.Algorithms.ZeroDim
      Algebra.Field.RationalFunction
      Algebra.Ring.Polynomial.Homogenised
      Control.Monad.ST.Combinators
  other-modules:
      Algebra.Algorithms.FGLM
  hs-source-dirs:
      src
  default-extensions: CPP DataKinds FlexibleContexts FlexibleInstances GADTs MultiParamTypeClasses OverloadedLabels PolyKinds TypeFamilies TypeInType UndecidableInstances NoImplicitPrelude
  ghc-options: -Wall -O2
  build-depends:
      MonadRandom
    , algebra
    , algebraic-prelude
    , base >=4.7 && <5
    , containers
    , control-monad-loop
    , convertible
    , dlist
    , equational-reasoning
    , foldl
    , ghc-typelits-knownnat
    , heaps
    , hmatrix
    , lens
    , matrix
    , monad-loops
    , mono-traversable
    , mtl
    , parallel
    , reflection
    , semigroups
    , sized
    , vector
  exposed-modules:
      Algebra.Bridge.Singular
      Algebra.Bridge.Singular.Syntax
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , process-extras
    , semigroups
    , text
    , transformers
    , type-natural
  exposed-modules:
      Algebra.Arithmetic
      Algebra.Field.Finite
      Algebra.Field.Prime
      Algebra.Instances
      Algebra.Internal
      Algebra.Normed
      Algebra.Ring.Ideal
      Algebra.Ring.Polynomial.Class
      Algebra.Ring.Polynomial.Monomial
      Algebra.Scalar
  hs-source-dirs:
      src
  default-extensions: CPP DataKinds FlexibleContexts FlexibleInstances GADTs MultiParamTypeClasses NoImplicitPrelude OverloadedLabels PolyKinds TypeFamilies TypeInType UndecidableInstances
  ghc-options: -Wall -O2
  build-depends:
      ListLike
    , MonadRandom
    , algebra
    , algebraic-prelude
    , base >=4.7 && <5
    , constraints
    , containers
    , convertible
    , deepseq
    , equational-reasoning
    , foldl
    , ghc-typelits-knownnat
    , ghc-typelits-presburger >=0.2.0.5
    , hashable
    , intern
    , lens
    , mono-traversable
    , reflection
    , singletons
    , sized
    , type-natural
    , unordered-containers
    , vector
    , vector-instances
  exposed-modules:
      Algebra.Field.Finite.Test
      Algebra.Field.Fraction.Test
      Algebra.Field.Prime.Test
      Algebra.Ring.Ideal.Test
      Algebra.Ring.Polynomial.Monomial.Test
      Algebra.Ring.Polynomial.Test
      Algebra.TestUtils
  hs-source-dirs:
      src
  ghc-options: -Wall -Wno-orphans
  build-depends:
      QuickCheck
    , algebraic-prelude
    , base >=4.7 && <5
    , containers
    , quickcheck-instances
    , reflection
    , sized
    , smallcheck
    , type-natural
  exposed-modules:
      Algebra.Ring.Polynomial.Factorise
  hs-source-dirs:
      src
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , algebra
    , algebraic-prelude
    , arithmoi
    , base >=4.7 && <5
    , containers
    , control-monad-loop
    , dlist
    , integer-logarithms
    , lens
    , monad-loops
    , mtl
    , primes
    , sized
    , type-natural
    , vector
  exposed-modules:
      Algebra.Field.Galois
  other-modules:
      Algebra.Field.Galois.Conway
      Algebra.Field.Galois.Internal
  hs-source-dirs:
      src
  default-extensions: CPP DataKinds FlexibleContexts FlexibleInstances GADTs MultiParamTypeClasses NoImplicitPrelude OverloadedLabels PolyKinds TypeFamilies TypeInType UndecidableInstances NoImplicitPrelude
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , algebra
    , algebraic-prelude
    , base >=4.7 && <5
    , lens
    , monad-loops
    , reflection
    , singletons
    , sized
    , template-haskell
    , vector
  exposed-modules:
      Data.Entry
      Data.Heap.Class
      Data.Heap.Ekmett
      Data.Heap.Pairing
      Data.Heap.Spray
  hs-source-dirs:
      src
  default-extensions: BangPatterns ConstraintKinds GADTs MultiParamTypeClasses TypeFamilies
  ghc-options: -O2 -Wall
  build-depends:
      base >=4.7 && <5
    , heaps
    , reflection
  exposed-modules:
      Algebra.Algorithms.ChineseRemainder
      Algebra.LinkedMatrix
      Algebra.Matrix
      Algebra.Matrix.DataMatrix
      Algebra.Matrix.Generic
      Algebra.Matrix.Generic.Mutable
      Algebra.Matrix.HMatrix
      Algebra.Matrix.IntMap
      Algebra.Matrix.RepaIntMap
  other-modules:
      Algebra.Matrix.Generic.Base
  hs-source-dirs:
      src
  default-extensions: CPP DataKinds FlexibleContexts FlexibleInstances GADTs MultiParamTypeClasses NoImplicitPrelude OverloadedLabels PolyKinds TypeFamilies TypeInType UndecidableInstances
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , algebra
    , algebraic-prelude
    , base >=4.7 && <5
    , containers
    , deepseq
    , hmatrix
    , lens
    , matrix
    , monad-loops
    , mtl
    , parallel
    , primes
    , primitive
    , reflection
    , repa
    , vector
  exposed-modules:
      Algebra.Algorithms.Groebner
      Algebra.Prelude.Core
      Algebra.Ring.Polynomial
      Algebra.Ring.Polynomial.Labeled
      Algebra.Ring.Polynomial.Quotient
      Algebra.Ring.Polynomial.Univariate
  other-modules:
      Algebra.Ring.Polynomial.Internal
  hs-source-dirs:
      src
  default-extensions: CPP DataKinds FlexibleContexts FlexibleInstances GADTs MultiParamTypeClasses OverloadedLabels PolyKinds TypeFamilies TypeInType UndecidableInstances NoImplicitPrelude
  ghc-options: -Wall -O2
  build-depends:
      algebra
    , algebraic-prelude
    , base >=4.7 && <5
    , containers
    , deepseq
    , equational-reasoning
    , ghc-typelits-knownnat
    , hashable
    , heaps
    , lens
    , matrix
    , monad-loops
    , mono-traversable
    , reflection
    , singletons
    , sized
    , text
    , type-natural
    , unamb
    , unordered-containers
    , vector
  exposed-modules:
      Algebra.Ring.Polynomial.Parser
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      algebraic-prelude
    , base >=4.7 && <5
    , megaparsec >=6.3 && <7
    , singletons
    , text
    , type-natural
