name:                factor-hensel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/factor-hensel#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algebra.Ring.Polynomial.Factorise.Hensel
  build-depends:       base >= 4.7 && < 5
                     , computational-algebra
                     , algebraic-prelude
                     , algebra
  default-language:    Haskell2010
  ghc-options:         -Wall
  extensions:         TypeInType , DataKinds , PolyKinds
                    , GADTs , MultiParamTypeClasses , TypeFamilies
                    , FlexibleContexts , FlexibleInstances
                    , UndecidableInstances
                    , OverloadedLabels , NoImplicitPrelude
                    , QuasiQuotes , ScopedTypeVariables
